@@ -9,6 +9,8 @@ pycdf
  - New function concatCDF to read data from multiple CDFs
  - Fix assignment of "raw" values to EPOCH16 Attribute
  - Fix "minimum value" calculation for TT2000 types
+ - Fix carryover of compression parameter when making a variable from
+   another variable
  - istp.VariableChecks adds check for VALID/SCALE MIN/MAX Entry types
  - istp.VariableChecks adds check for DELTA attributes
  - istp.VariableChecks and FileChecks add check for empty attribute Entries
